--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
     </style>
     <body>
         <h1>OVDR Extension</h1>
-        // <button id="DisableButton">Toggle</button>
+        <button id="DisableButton">Toggle</button>
     </body>
     <script src="popup.js"></script>
 </html>
